//2.55 Changes

//Alpha 64
Updated the ZSA docs to cover the new instruction, and added section anchors. 
Ported some module family members (startingScreen, startingDMap) from 2.53.1. 
Ported Game->IncrementQuest() from 2.53.1, Beta 40
Added a termination to the quit state enum as qQUITLAST, and added qINCQST.
	( ZoriaRPG, 20th April, 2020 )

//Alpha 63
Added 'Export ZASM' menu
Added 'Import ZASM' menu
	Replaces the old individual 'Import [type] ZASM Script' menus
	( Venrob, 18h April, 2020 )

Alpha is now 63
	( Venrob, 16th April, 2020 )

//Alpha 62
Switch-case Upgrades
	Added a register SWITCHKEY to store the key of switch-cases, so it doesn't need to repeatedly push/pop it
	Optimized constant values in cases... which should be all of them. Why wasn't it already optimal? :shrug:
	Added switch/case ability to switch Strings. Simply use a string literal as the constant for the case.
		Strings and ints cannot be combined in a single switch/case.
		Matching is case-sensitive by default; though '#option STRING_SWITCH_CASE_INSENSITIVE on' will
			make it case-insensitive.
	Optimized switch/case with only default case.
		If the only case is default (even in a situation like 'case 1: default:', it's one joint case)
			then a sizable amount of overhead can be skipped while maintaining identical functionality.
	( Venrob, 16th April, 2020 )

Updated 'string_functions.zh'
	Moved 'printf' and 'sprintf' into 'std::string::'
	This allows them to be used if desired, but the new internal versions will be used by default.
Internalize 'sprintf' and 'printf' functions.
	These should be MUCH faster than their ZScript counterparts, with 99% the same results.
	Take 0-16 varargs at this time; could theoretically expand to 18...
	Only difference from ZScript functions: if you would have gotten an array out-of-bounds error
		by having too many '%' in the formatstr, these will simply use '0' as the value instead of erroring.