@@ -107,5 +107,6 @@ X(	RangeInverted,				CX,	A,	E,	INT,	INT,	"Value range must have smallest...large
 X(	RangeEqual,				CX,	A,	W,	INT,	INT,	"Range is of equal value (%d...%d) on both ends"				)
 X(	BadReassignCall,				C,	A,	W,	STR,	VOID,	"Reassigning function '%s' was called on a constant value! Reassign failed."				)
 X(	MixedSwitch,				CX,	A,	E,	VOID,	VOID,	"Switch contains both strings and numbers"				)
+X(	AssertFail,				C,	A,	E,	STR,	VOID,	"Assert Failed! %s"				)
 
 #undef STR
